tests/overloadedrecflds/should_compile/T13352_hard_A.hs
{-# LANGUAGE DuplicateRecordFields #-}
module T13352_hard_A where
  data S = C { foo :: Int }
