tests/overloadedrecflds/should_fail/T17420.hs
{-# LANGUAGE DuplicateRecordFields #-}
module T17420 where

import T17420A

foo = undefined name
